--- a/_output.yml
+++ b/_output.yml
@@ -12,7 +12,7 @@ bookdown::gitbook:
       github: yes
       facebook: no
       twitter: no
-    download: "pdf"
+    download: ["pdf", "epub"]
 
 bookdown::pdf_book:
   includes:
@@ -20,3 +20,6 @@ bookdown::pdf_book:
   latex_engine: pdflatex
   citation_package: natbib
   keep_tex: yes
+
+bookdown::epub_book:
+  stylesheet: templates/style.css
